Added objects to demo

--- a/demo/index.html
+++ b/demo/index.html
@@ -1,8 +1,9 @@
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <title>Map generation demo</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" type="text/css">
   </head>
   <body>
     <div id="main">
@@ -30,36 +31,68 @@
   [X] - Find rooms boundaries
   [X] - Find all possible pathes (from rooms virtual centers)
   [ ] - Create pathes between rooms
-  [ ] - Place random objects
+  [X] - Place random objects
   [X] - Render the map
 </pre>
   </div>
 
     <script src="https://code.jquery.com/jquery-1.12.3.min.js" integrity="sha256-aaODHAgvwQW1bFOGXMeX+pC4PZIPsvn2h1sArYOhgXQ=" crossorigin="anonymous"></script>
     <script src="../js/mapgen.js" type="text/javascript"></script>
-    <script src="../js/room_samples.js" type="text/javascript"></script>
-    <script>
+    <script src="../js/mapgen-objects.js" type="text/javascript"></script>
+    <script src="../js/mapgen-privates.js" type="text/javascript"></script>
+    <script src="../js/mapgen-methods.js" type="text/javascript"></script>
+    <script src="../js/demo_base_objects.js" type="text/javascript"></script>
+    <script src="../js/demo_room_samples.js" type="text/javascript"></script>
+    <script type="text/javascript">
 
     // Generating the map
-    var map=new MapGen;
+    var map=new MapGen({cellTypes:cellTypes, cleanLevel:4});
     map.createMap();
-    //map.createMapFromSample(samples[0]);
+    //map.createMapFromSample(samples[2]);
     map.createRooms();
     map.removeSmallRooms(50);
+
+    /*
+      "game" specific "mechanisms" here. This is not included in the class
+      (beside of map.addItem())
+    */
+    // Creating ennemies, taking size of the map in account
+    createEnnemies('ennemy', living_things.player.level, map._getWalkableCells(true).length);
+    createEnnemies('boss', living_things.player.level, null, 1);
+    // Adding to the map
+    map.addItems(living_things, true);
+    // Creating life potions
+    createSimpleItem('life_potion', map._getWalkableCells(true).length, 2);
+    // Creating chests
+    createSimpleItem('token_strength', map._getWalkableCells(true).length, 3);
+    createSimpleItem('token_damage', map._getWalkableCells(true).length, 3);
+    // Adding them to the map.
+    map.addItems(dead_things, false); // Can even be in lava !
+
+    // Debug
+    //map.outlineRooms();
     map._findPaths();
+
+    // Render the map
     map.jQueryRender('#grid');
+
+    /***************************************************************************
+    Beside this point, it's only debugging things (room overlays, and paths essay)
+
+    */
+    var cellSize= 14;
 
     /*
       Rooms overlays... May be included in the class later...
     */
     for(let i in map.rooms){
-      $('#rooms').append('<div class="'+map.cssPrefix+'room '+map.cssPrefix+'room-'+map.rooms[i].id+'-overlay" style="top:'+(map.rooms[i].box.yMin*7)
-      +'px; left:'+(map.rooms[i].box.xMin*7)
-      +'px; width:'+((map.rooms[i].box.xMax-map.rooms[i].box.xMin+1)*7)
-      +'px; height:'+((map.rooms[i].box.yMax-map.rooms[i].box.yMin+1)*7)
+      $('#rooms').append('<div class="'+map.cssPrefix+'room '+map.cssPrefix+'room-'+map.rooms[i].id+'-overlay" style="top:'+(map.rooms[i].box.xMin*cellSize)
+      +'px; left:'+(map.rooms[i].box.yMin*cellSize)
+      +'px; height:'+((map.rooms[i].box.xMax-map.rooms[i].box.xMin+1)*cellSize)
+      +'px; width:'+((map.rooms[i].box.yMax-map.rooms[i].box.yMin+1)*cellSize)
       +'px"><h2>'+map.rooms[i].id+'</h2>'+(map.rooms[i].box.xMax-map.rooms[i].box.xMin)+' x '+(map.rooms[i].box.yMax-map.rooms[i].box.yMin)+'<br>C: '+map.rooms[i].box.cX+' x '+map.rooms[i].box.cY+'</div>')
     }
-    $('#grid').prepend('<canvas id="'+map.cssPrefix+'pathes" width="'+(map.grid[0].length*7)+'px" height="'+(map.grid.length*7)+'px"></canvas>');
+    $('#grid').prepend('<canvas id="'+map.cssPrefix+'pathes" width="'+(map.grid[0].length*cellSize)+'px" height="'+(map.grid.length*cellSize)+'px"></canvas>');
 
     /*
       Drawing all pathes on the overlay. May be included later as a class function.
@@ -73,14 +106,14 @@
     for (let i=0; i<map.distances.length; i++){
       let idx1=map._getRoomIndex(map.distances[i][1][0]);
       let idx2=map._getRoomIndex(map.distances[i][1][1])
-      ctx.moveTo((map.rooms[idx1].box.cX*7), (map.rooms[idx1].box.cY*7));
-      ctx.lineTo((map.rooms[idx2].box.cX*7), (map.rooms[idx2].box.cY*7));
+      ctx.moveTo((map.rooms[idx1].box.cY*cellSize), (map.rooms[idx1].box.cX*cellSize));
+      ctx.lineTo((map.rooms[idx2].box.cY*cellSize), (map.rooms[idx2].box.cX*cellSize));
     }
     ctx.closePath();
     ctx.stroke();
 
     /**
-      jQuery stuff to handle events
+      jQuery stuff to handle events on buttons
     */
     $('#rooms').hide();
     $('#'+cId).hide();
