Thanks to @jondcoleman, fixed the "Ennemy" typo...

--- a/demo/index.html
+++ b/demo/index.html
@@ -43,8 +43,8 @@
 
             <div class="menu-button">Content: enemies</div>
             <div class="menu-content">
-              createEnnemies:true,
-              ennemiesPercent:10,
+              createEnemies:true,
+              enemiesPercent:10,
               createBoss:true,
             </div>
 
