Rewoved the fixed page width

--- a/demo/index.html
+++ b/demo/index.html
@@ -194,15 +194,15 @@
   </div>
 
     <script src="https://code.jquery.com/jquery-1.12.3.min.js" integrity="sha256-aaODHAgvwQW1bFOGXMeX+pC4PZIPsvn2h1sArYOhgXQ=" crossorigin="anonymous"></script>
-    <script src="../js/mapgen.js" type="text/javascript"></script>
+    <!--<script src="../js/mapgen.js" type="text/javascript"></script>
     <script src="../js/mapgen-objects.js" type="text/javascript"></script>
     <script src="../js/mapgen-privates.js" type="text/javascript"></script>
     <script src="../js/mapgen-methods.js" type="text/javascript"></script>
     <script src="../js/demo_functions.js" type="text/javascript"></script>
     <script src="../js/demo_base_objects.js" type="text/javascript"></script>
-    <script src="../js/demo_room_samples.js" type="text/javascript"></script>
-    <!--<script src="../build.js" type="text/javascript"></script>
-    <script src="../build-demo.js" type="text/javascript"></script>-->
+    <script src="../js/demo_room_samples.js" type="text/javascript"></script>-->
+    <script src="../build.js" type="text/javascript"></script>
+    <script src="../build-demo.js" type="text/javascript"></script>
     <script type="text/javascript">
 
     var map=null;
